// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/accounts/:account/recalls Recalls GET /:accountId/recalls should fetch all recalls for the account 1`] = `
Object {
  "entities": Object {
    "recalls": Object {
      "d5ab9bc0-f0e6-4538-99ae-2fe7f920abf4": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "id": "d5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "interval": "{\\"-1 months\\"}",
        "isActive": true,
        "isDeleted": false,
        "lengthSeconds": null,
        "primaryType": "email",
        "primaryTypes": Array [
          "sms",
        ],
      },
      "e5ab9bc0-f0e6-4538-99ae-2fe7f920abf4": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "id": "e5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "interval": "{\\"1 months\\"}",
        "isActive": true,
        "isDeleted": false,
        "lengthSeconds": null,
        "primaryType": "email",
        "primaryTypes": Array [
          "sms",
        ],
      },
    },
  },
  "result": Array [
    "d5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
    "e5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
  ],
}
`;

exports[`/api/accounts/:account/recalls Recalls GET /:accountId/recalls/outbox Outbox for Recalls - Should return Patient Old 1`] = `
Array [
  Object {
    "patient": Object {
      "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
      "address": Object {},
      "avatarUrl": null,
      "birthDate": null,
      "contCareInterval": "6 months",
      "contactMethodNote": null,
      "dueForHygieneDate": null,
      "dueForRecallExamDate": null,
      "email": "hello@hello.com",
      "familyId": null,
      "firstApptDate": null,
      "firstApptId": null,
      "firstName": "Old",
      "gender": null,
      "homePhoneNumber": null,
      "hygiene": true,
      "insurance": null,
      "insuranceInterval": null,
      "isDeleted": false,
      "isSyncedWithPMS": false,
      "isSyncedWithPms": false,
      "language": null,
      "lastApptDate": null,
      "lastApptId": null,
      "lastHygieneApptId": null,
      "lastName": "Patient",
      "lastRecallApptId": null,
      "lastRecallDate": null,
      "lastRestorativeApptId": null,
      "lastRestorativeDate": null,
      "middleName": null,
      "mobilePhoneNumber": null,
      "nextApptDate": null,
      "nextApptId": null,
      "otherPhoneNumber": null,
      "patientUserId": null,
      "phoneNumber": null,
      "pmsCreatedAt": null,
      "pmsId": null,
      "prefContactPhone": null,
      "prefName": null,
      "preferences": Object {
        "afternoon": true,
        "birthdayMessage": true,
        "emailNotifications": true,
        "evening": true,
        "morning": true,
        "newsletter": true,
        "phone": true,
        "recalls": true,
        "referrals": true,
        "reminders": true,
        "reviews": true,
        "sms": true,
        "weekdays": true,
        "weekends": true,
      },
      "sentRecalls": Array [],
      "status": "Active",
      "type": null,
      "workPhoneNumber": null,
    },
    "primaryTypes": Array [
      "email",
    ],
    "recall": Object {
      "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
      "interval": "1 months",
      "isActive": true,
      "isDeleted": false,
      "lengthSeconds": null,
      "primaryType": "email",
      "primaryTypes": Array [
        "email",
      ],
    },
    "sendDate": "2017-01-06T01:00:00.000Z",
  },
]
`;

exports[`/api/accounts/:account/recalls Recalls POST /:accountId/recalls should create a recall for the account 1`] = `
Object {
  "entities": Object {
    "recalls": Object {
      "f5ab9bc0-f0e6-4538-99ae-2fe7f920abf4": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "id": "f5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "interval": "-2 months",
        "isActive": true,
        "isDeleted": false,
        "lengthSeconds": null,
        "primaryType": "email",
        "primaryTypes": Array [
          "sms",
        ],
      },
    },
  },
  "result": "f5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
}
`;

exports[`/api/accounts/:account/recalls Recalls PUT /:accountId/recalls/:recallId should update a recall for the account 1`] = `
Object {
  "entities": Object {
    "recalls": Object {
      "d5ab9bc0-f0e6-4538-99ae-2fe7f920abf4": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "id": "d5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "interval": "{\\"-1 months\\"}",
        "isActive": true,
        "isDeleted": false,
        "lengthSeconds": null,
        "primaryType": "email",
        "primaryTypes": Array [
          "phone",
        ],
      },
    },
  },
  "result": "d5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
}
`;
